# named_mints

./: Anchor.toml
programs/named_mints/: Cargo.toml
programs/named_mints/src/: lib.rs
tests/: named_mints.ts
